--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,48 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@layer components {
+    input {
+        @apply border-1 border-black rounded-lg px-1 
+    }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+    .menu-link{
+        @apply font-semibold text-lg cursor-pointer hover:underline underline-offset-4 uppercase decoration-green-500 decoration-2;
+    }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+    .modal-backdrop {
+        @apply fixed top-0 bottom-0 left-0 right-0 bg-black/50 flex items-center justify-center duration-200 z-100
+    }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+    .modal-container {
+        @apply min-w-fit w-150  overflow-visible rounded-md bg-white absolute duration-200 
+    }
+
+
+    /*animation*/
+
+    .loading-dots {
+        @apply inline-block font-mono text-xs;
+
+        clip-path: inset(0 3ch 0 0);
+        animation: loading 1s steps(4) infinite;
+        }
+    .spining-gear {
+        animation: spining-gear 5s linear infinite
+    }
+    
+        
+    @keyframes loading {
+    to {
+        clip-path: inset(0 -1ch 0 0)
+    }
+    }
+
+    @keyframes spining-gear {
+        from {
+            transform: rotate(0)
+        }
+        to {
+            transform:rotate(360deg)
+        }
+    }
 }
