--- a/app/globals.css
+++ b/app/globals.css
@@ -5,17 +5,47 @@
         @apply border-1 border-black rounded-lg px-1 
     }
 
+    label {
+        @apply  w-full block font-semibold
+    }
+
     .menu-link{
         @apply font-semibold text-lg cursor-pointer hover:underline underline-offset-4 uppercase decoration-green-500 decoration-2;
     }
 
     .modal-backdrop {
-        @apply fixed top-0 bottom-0 left-0 right-0 bg-black/50 flex items-center justify-center duration-200 z-100
+        @apply fixed top-0 bottom-0 left-0 right-0 bg-black/50 flex items-center justify-center z-100
     }
 
     .modal-container {
-        @apply min-w-fit w-150  overflow-visible rounded-md bg-white absolute duration-200 
+        @apply min-w-fit w-150  overflow-visible rounded-md bg-white absolute 
     }
+
+    .modal-field-container {
+        @apply w-full space-y-2
+    }
+
+    .modal-input-field {
+        @apply w-1/2 p-1 mb-0
+    }
+
+    .modal-textarea-fiel {
+        @apply border-1 border-black w-full h-30 rounded-lg p-1 mb-0 
+    }
+
+    .modal-buttons-container {
+        @apply absolute bottom-0 bg-lime-600/90 p-5 text-right space-x-5 font-semibold rounded-b-md w-full 
+    }
+
+    .modal-several-fields-container {
+        @apply px-5 space-y-5 mb-20 pb-10 max-h-[50vh] overflow-y-scroll 
+    }
+
+    .select-field {
+        @apply min-w-fit w-50 inset-shadow-xs inset-shadow-gray-400 font-semibold rounded-lg bg-white p-0.5
+    }
+
+
 
 
     /*animation*/
